--- a/package.json
+++ b/package.json
@@ -2,5 +2,48 @@
   "dependencies": {
     "global": "^4.4.0",
     "prettier": "^2.3.2"
-  }
+  },
+  "name": "edu2021",
+  "version": "1.0.0",
+  "description": "My edu project 2021",
+  "main": "index.js",
+  "devDependencies": {
+    "@prettier/plugin-xml": "^1.0.2",
+    "@types/browser-sync": "^2.26.2",
+    "@types/gulp": "^4.0.9",
+    "browser-sync": "^2.27.5",
+    "del": "^6.0.0",
+    "esm": "^3.2.25",
+    "gulp": "^4.0.2",
+    "gulp-cli": "^2.3.0",
+    "gulp-cssimport": "^7.0.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svg-sprite": "^1.3.7",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.2",
+    "node-sass": "^4.14.0",
+    "prettier": "^2.3.2"
+  },
+  "scripts": {
+    "clean": "gulp clean",
+    "start": "gulp",
+    "format": "prettier \"./src/**/*.{html,css,scss,svg}\" --write"
+  },
+  "lint-staged": {
+    "*.{html,css,scss,svg}": [
+      "prettier --write"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Lazard-Live/Edu2021.git"
+  },
+  "author": "Doretskiy Bogdan (workbd@bk.ru)",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Lazard-Live/Edu2021/issues"
+  },
+  "homepage": "https://github.com/Lazard-Live/Edu2021#readme"
 }
