--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "dependencies": {
-    "global": "^4.4.0",
-    "prettier": "^2.3.2"
-  },
-  "name": "edu2021",
+  "name": "Edu2021",
   "version": "1.0.0",
-  "description": "My edu project 2021",
-  "main": "index.js",
+  "license": "MIT",
+  "author": {
+    "name": "Bogdan Doretskiy",
+    "email": "workbd@bk.ru",
+    "url": "https://github.com/Lazard-Live"
+  },
   "devDependencies": {
     "@prettier/plugin-xml": "^1.0.2",
     "@types/browser-sync": "^2.26.2",
@@ -15,35 +15,39 @@
     "del": "^6.0.0",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-beautify": "^3.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.3.0",
     "gulp-cssimport": "^7.0.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-include": "^2.4.1",
+    "gulp-postcss": "9.0.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-svg-sprite": "^1.3.7",
+    "gulp-strip-css-comments": "^2.0.0",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-util": "^3.0.8",
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
-    "node-sass": "^4.14.0",
+    "node-sass": "^6.0.1",
+    "postcss": "^8.4.5",
+    "postcss-sort-media-queries": "^4.2.1",
     "prettier": "^2.3.2"
   },
   "scripts": {
     "clean": "gulp clean",
+    "build": "yarn run clean && gulp build",
+    "build:prod": "yarn run build --production",
     "start": "gulp",
-    "format": "prettier \"./src/**/*.{html,css,scss,svg}\" --write"
+    "start:prod": "yarn run start --production",
+    "format": "prettier \"./src/**/*.{html,css,scss,js,svg}\" --write",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{html,css,scss,svg}": [
+    "*.{html,css,scss,js,svg}": [
       "prettier --write"
     ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Lazard-Live/Edu2021.git"
-  },
-  "author": "Doretskiy Bogdan (workbd@bk.ru)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Lazard-Live/Edu2021/issues"
-  },
-  "homepage": "https://github.com/Lazard-Live/Edu2021#readme"
+  }
 }
